Home-Page (in progress)

--- a/mealguru_react/src/components/Header/Header.css
+++ b/mealguru_react/src/components/Header/Header.css
@@ -37,13 +37,16 @@ header {
     gap: 15px;
 }
 
-.headings p {
+.head-link {
     display: inline;
+    text-decoration: none;
     color: #4d4d4d;
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
     /* padding-left: 25px; */
 }
+
+
 
 .buttons {
     display: flex;
@@ -59,8 +62,9 @@ header {
     margin-left: 15px;
 }
 
-.button1 p {
+.button1-link {
     font-size: 11px;
+    text-decoration: none;
     color: white;
 }
 
@@ -75,7 +79,8 @@ header {
     margin-left: 15px;
 }
 
-.button2 p {
+.button2-link {
     font-size: 11px;
+    text-decoration: none;
     color: #000000;
 }
