--- a/mealguru_react/src/components/Footer/Footer.css
+++ b/mealguru_react/src/components/Footer/Footer.css
@@ -131,5 +131,24 @@
     font-weight: 500;
 }
 
+.copyright-div {
+    display: flex;
+    justify-content: center;
+}
+
+.copyright {
+    height: 42px;
+    width: 950px;
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.copyright p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    color: #4d4d44;
+}
+
 
 
