--- a/mealguru_react/src/components/Ourplans/Ourplans.css
+++ b/mealguru_react/src/components/Ourplans/Ourplans.css
@@ -2,9 +2,8 @@
     height: auto;
     background-color: #fff7e3;
     text-align: center;
-    padding-top: 50px;
+    padding-top: 30px;
 }
-
 
 .text h2 {
     color: #1a244d;
@@ -27,9 +26,35 @@
     font-weight: 700;
 }
 
+/* offer box */
+
 .offers {
     display: flex;
     justify-content: center;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    gap: 20px;
+}
+
+.hack {
+    background: #b3f1ff;
+    width: 100px;
+    height: 20px;
+    border-radius: 30px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -10px;
+    margin-left: 200px;
+    border: 1px solid #000000;
+}
+
+.hack p {
+    font-size: 13px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #000000;
+
 }
 
 .offer-border {
@@ -38,13 +63,13 @@
     background-color: #ffffff;
     border-radius: 20px;
     margin-top: 20px;
+    box-shadow: 1px 1px 35px -25px black;
 }
 
 .offer-top {
     display: flex;
     justify-content: space-between;
-    height: 40%;
-    border: black 2px solid;    
+    height: 35%;
     padding: 15px
 }
 
@@ -82,8 +107,47 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.offer-desc {
+.offer-middle {
     background-color: #b3f1ff;
     border-radius: 10px;
+    height: 35%;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    /* margin-bottom: -30pxpx; */
+}
 
+.offer-middle ul{
+    text-align: left;
+    line-height: 30px;
+    padding-top: 3px;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.offer-middle li {
+    vertical-align: middle;
+}
+
+.offer-middle li::marker {
+    font-size: 20px;
+}
+.subscribe-button {
+    width: 95%;
+    height: 30px;
+    margin: 15px auto auto auto;
+    /* margin-right: auto;
+    margin-left: auto; */
+    border-radius: 40px;
+    background-color: #ffcc57;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-top: 10px; */
+}
+
+.subscribe-button p {
+    color: #000000;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
 }
