--- a/mealguru_react/src/components/Insights/Insights.css
+++ b/mealguru_react/src/components/Insights/Insights.css
@@ -20,7 +20,7 @@
     font-family: Arial, Helvetica, sans-serif;
     text-align: center; 
     margin-bottom: 30px;
-    font-weight: 500;
+    font-weight: 600;
     
 }  
 
@@ -28,8 +28,14 @@
 
 .Insight-Div {
     background-color: #fff7e3;
+    /* border: 2px solid black; */
     height: auto;
     width: 950px;
     margin-right: auto;
     margin-left: auto;
+    padding-bottom: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+
 }
