--- a/mealguru_react/src/components/Contact/Contact.css
+++ b/mealguru_react/src/components/Contact/Contact.css
@@ -43,5 +43,80 @@
     width: 466px;
     height: 611px;
     border-radius: 15px;
+}
+/* contact-form */
 
+.contact-form {
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+    background-color: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.input-firstline {
+    /* border: 2px solid black; */
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.input-firstline input {
+    width: 158px;
+    height: auto;
+    border-radius: 25px;
+    border: 1px solid grey;
+    padding: 11px 20px;
+}
+
+.input-firstline input:focus {
+    outline: none
+}
+
+.input-email {
+    width: 92%;
+    /* border: 2px solid black; */
+    display: flex;
+    justify-content: center;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 15px;
+}
+
+.input-email input {
+    height: auto;
+    width: 370px;
+    border-radius: 25px;
+    border: 1px solid grey;
+    padding: 11px 20px;
+}
+
+.input-email input:focus {
+    outline:none;
+}
+
+.input-textarea {
+    width: 92%;
+    /* border: 2px solid black; */
+    /* display: flex;
+    justify-content: center; */
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 15px;
+}
+
+.input-textarea textarea {
+    border-radius: 15px;
+    border: 1px solid grey;
+    padding: 11px 20px;
+    overflow: hidden;
+    resize: none;
+}
+
+.input-textarea textarea:focus {
+    outline: none
 }
