--- a/mealguru_react/src/components/Sections/VideoPortion/VideoPortion.css
+++ b/mealguru_react/src/components/Sections/VideoPortion/VideoPortion.css
@@ -153,7 +153,7 @@
     .video-portion {
         height: auto;
         margin-top: 0px;
-        padding: 0px 0px;
+        padding: 20px 0px;
     }
 
     .video iframe {
@@ -181,31 +181,27 @@
         line-height: 20px;
     }
 
-    .video-text-btn {
-        /* margin: 15px auto 0; */
-    
-    }
+
 }
 
 /* Small: 577px to 768px */
 @media (max-width: 768px) {
     .inner-div {
-        width: 90%;
+        width: 83%;
         padding: 20px;
         /* flex-direction: column; */
         align-items: center;
     }
-.video-portion {
-    margin-top: 0px;
-    padding-top: 0px;
-}
+
     .video iframe {
-        height: 220px;
-        width: 330px;
+        height: 210px;
+        width: 270px;
         border-radius: 10px;
         background-size: contain;
     }
-
+    .video-text {
+        width: 50%;
+    }
     .video-text h2 {
         font-size: 28px;
         margin-bottom: 5px;
@@ -240,17 +236,19 @@
     }
 
     .video iframe {
-        width: 100%;
-        height: 220px;
+        width: 70vw;
+        height: 35vh;
     }
 
     .video-text {
         margin: 20px 0 0;
         text-align: center;
+        width: 80%;
     }
 
     .video-text h2 {
         font-size: 24px;
+        text-align: center;
     }
 
     .video-text p {
@@ -260,6 +258,8 @@
     .video-text-btn {
         width: 140px;
         height: 26px;
+        margin-right: auto;
+        margin-left: auto;
     }
 
     .video-text-btn p {
