--- a/mealguru_react/src/components/Footer/Footer.css
+++ b/mealguru_react/src/components/Footer/Footer.css
@@ -1,12 +1,15 @@
 .footer {
-    height: auto;
+    height: 220px;
     width: 100%;
     background-color: #1A244DE8;
     display: flex;
     justify-content: center;
     padding-top: 60px;
-    padding-bottom: 60px;
     gap: 50px;
+}
+
+.firstcol {
+    width: 23%;
 }
 
 .firstcol img {
@@ -149,95 +152,19 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     color: #4d4d44;
-} 
-
-
+}
 
 /* Large (993px - 1200px) */
 @media (max-width: 1200px) {
     .footer {
-        gap: 40px;
-        flex-wrap: wrap;
-    }
-    .subscribe {
-        width: 300px;
-    }
-    .copyright {
-        width: 90%;
+        gap: 35px;
     }
 }
 
 /* Medium (769px - 992px) */
 @media (max-width: 992px) {
-    .footer {
+    .firstcol {
+        width: 900px;
         flex-wrap: wrap;
-        padding: 40px 20px;
-        gap: 30px;
-    }
-    .subscribe {
-        width: 100%;
-    }
-    .copyright {
-        flex-direction: column;
-        gap: 5px;
-        height: auto;
-        padding: 10px 0;
     }
 }
-
-/* Small (577px - 768px) */
-@media (max-width: 768px) {
-    .footer {
-        /* flex-direction: column; */
-        /* align-items: center; */
-        height: auto;
-        padding: 30px 15px;
-    }
-    .firstcol,
-    .seccol,
-    .thirdcol,
-    .fourthcol {
-        width: 100%;
-        /* text-align: center; */
-    }
-    .subscribe {
-        flex-direction: column;
-        height: auto;
-        border-radius: 20px;
-        padding: 10px;
-    }
-    .subscribe input {
-        width: 30%;
-        border-radius: 20px;
-        margin-bottom: 10px;
-    }
-    .sub-button {
-        width: 100%;
-        border-radius: 20px;
-    }
-    .copyright {
-        flex-direction: column;
-        gap: 10px;
-        text-align: center;
-    }
-}
-
-/* Extra Small (up to 576px) */
-@media (max-width: 576px) {
-    .footer {
-        gap: 20px;
-        padding: 30px 10px;
-    }
-    .subscribe {
-        width: 100%;
-    }
-    .subscribe input,
-    .sub-button {
-        font-size: 16px;
-    }
-    .copyright p {
-        font-size: 12px;
-    }
-}
-
-
